# qa_guru_HW17_api

./: README.md  pyproject.toml  resource.py
tests/: test_delete.py  test_get.py  test_post.py  test_put.py  test_register_user.py
